# langchain-rag

./: README.md  dspy2.py  dspy_example.py  evaluation_results.csv  fastapi_rag.py  fastapi_rag_csv.py  generate.py  pyproject.toml  rag.py  rag_chatprompt.py  rag_chatprompt_eval.py  rag_chatprompt_qa.py  rag_cot.py  rag_csv.py  rag_dspy.py  rag_eval.py  rag_json.py  rag_json_long.py  rag_q_a.py  rag_qa_system.py  rag_streamlit.py  requirements.txt  sales_data.csv  sales_qa_data.csv
data/: data.csv  dataset.json  dataset_long.json
